# nanobot

./: COMMUNICATION.md  COMPACT_TELEGRAM.md  Dockerfile  LICENSE  README.md  pyproject.toml  test_docker.sh
.github/workflows/: ci.yml  publish-pypi.yml
bridge/: package.json
bridge/src/: index.ts  whatsapp.ts
nanobot/agent/: _context_py.py  loop.py  subagent.py
nanobot/agent/tools/: __init__.py  _filesystem_py.py  _registry_py.py  _shell_py.py  message.py  spawn.py  web.py
nanobot/bus/: __init__.py  _queue_py.py
nanobot/channels/: base.py  manager.py  telegram.py  whatsapp.py
nanobot/cli/: commands.py
nanobot/config/: schema.py
nanobot/cron/: __init__.py
nanobot/heartbeat/: __init__.py
nanobot/providers/: litellm_provider.py
rust/: Cargo.toml
rust/src/: bus.rs  context.rs  lib.rs  memory.rs  messages.rs  session.rs  skills.rs
rust/src/tools/: base.rs  filesystem.rs  mod.rs  registry.rs  shell.rs
tests/: test_bus.py  test_context.py  test_memory.py  test_memory_search.py  test_session.py  test_tools.py
workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
workspace/memory/: MEMORY.md
