[project]
name = "debot"
version = "0.1.1"
description = "A lightweight and secure personal AI assistant framework"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "debot contributors"}
]
keywords = ["ai", "agent", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
    "websocket-client>=1.6.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
    "readability-lxml>=0.8.0",
    "rich>=13.0.0",
    "croniter>=2.0.0",
    "python-telegram-bot[socks]>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "maturin>=1.0,<2.0",
]

[project.scripts]
debot = "debot.cli.commands:app"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "."
module-name = "debot_rust"
manifest-path = "rust/Cargo.toml"
features = ["pyo3/extension-module"]
include = [
    "debot/**/*.py",
    "debot/skills/**/*.md",
    "debot/skills/**/*.sh",
    "bridge/**/*",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "N803"]  # N803: camelCase args needed for JSON schema compatibility

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
