[package]
name = "nanobot_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "nanobot_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.24", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "time", "process", "fs"] }
parking_lot = "0.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
dirs = "5.0"
futures = "0.3"
regex = "1.10"
base64 = "0.22"
cron = "0.15"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
html-escape = "0.2"
url = "2.5"
